    [metadata]
    name = ANS_reactivity
    version = 0.0.1
    author = Liraz Attia, Benny Kupchinetsky, Keren Ruzal, Taly Ohad
    author_email = liraz.attia@gmail.com, benny.kpcn@gmail.com, talyohad@gmail.com, kerenruzal@mail.tau.ac.il
    description = Analyse autonomic nervous system reactivity and calculate Stress-Score.
    long_description = file: README.md, CHANGELOG.md, LICENSE
    long_description_content_type = text/markdown
    keywords = future, timetravel, example
    url = https://github.com/kerenruzal/ANS-reactivity-during-VR-stimulation
    project_urls =
        Bug Tracker = https://github.com/kerenruzal/ANS-reactivity-during-VR-stimulation/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

    [options]
    package_dir =
        = src
    packages = find:
    python_requires = >=3.6
    install_requires =
        numpy 1.21.0
        pandas 1.2.5
        heartpy 1.2.7
        neurokit2 0.1.2
        pathlib 1.0.1
        math 
        soundfile 0.10.3

    [options.extras_require]
    dev = black; flake8; pytest
    dist = build; twine
    docs = mkdocs

    [options.packages.find]
    where = src