    [metadata]
    name = time_travel
    version = 0.0.1
    author = Zvi Baratz
    author_email = z.baratz@gmail.com
    description = Travel in time using Python!
    long_description = file: README.md, CHANGELOG.md, LICENSE
    long_description_content_type = text/markdown
    keywords = future, timetravel, example
    url = https://github.com/ZviBaratz/time_travel
    project_urls =
        Bug Tracker = https://github.com/ZviBaratz/time_travel/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

    [options]
    package_dir =
        = src
    packages = find:
    python_requires = >=3.6
    install_requires =
        numpy

    [options.extras_require]
    dev = black; flake8; pytest
    dist = build; twine
    docs = mkdocs

    [options.packages.find]
    where = src